--- a/drupal/web/themes/frontend/src/modules/header/header.scss
+++ b/drupal/web/themes/frontend/src/modules/header/header.scss
@@ -1,13 +1,471 @@
-.m-header {
-  margin: 2rem 0;
+:root {
+  --header-navigation-height: 100vh;
+}
 
-  // Temp Logo style
-  .site-logo {
-    width: 80px;
+.m-header {
+  position: relative;
+  // Position above content when being sticky and/or expanded
+  z-index: map-get($z-indices, header);
+  // Do not collapse on `.m-header__wrapper` being sticky
+  min-height: pxToRem(168);
+
+  &.is-sticky {
+
+    .m-header__wrapper {
+      position: fixed;
+      top: pxToRem(-112);
+      bottom: auto;
+      width: 100%;
+
+      // Compensate for admin toolbar
+      .toolbar-fixed & {
+        width: calc(100% - 88px);
+      }
+      .toolbar-fixed[data-toolbar-menu='open'] & {
+        width: calc(100% - 240px);
+      }
+    }
+  }
+}
+
+// Sticky indicator to be watched with IntersectionOberserver (see `header.vue`)
+.m-header__sticky {
+  height: 0;
+  position: absolute;
+  left: 0;
+  bottom: pxToRem(56);
+
+  // Compensate for admin toolbar
+  .toolbar-vertical & {
+    bottom: pxToRem(95);
+  }
+}
+
+.m-header__inner {
+  position: relative;
+}
+
+.m-header__region {
+  &--header {
+    padding: pxToRem(36) 0;
+  }
+}
+
+.m-header__menu-toggle {
+  display: none;
+}
+
+.m-header__menu-toggle-icon {
+  display: block;
+  width: pxToRem(56);
+  height: pxToRem(56);
+  fill: currentColor;
+}
+
+// Default navigation styles
+.m-header__navigation-list {
+  list-style: none;
+  margin: 0;
+  padding: 0;
+  display: flex;
+}
+
+.m-header__navigation-item {
+  flex: 1;
+}
+
+.m-header__navigation-link {
+  color: inherit;
+  text-decoration: none;
+  display: block;
+
+  // Buttons
+  width: 100%;
+  background: transparent;
+  border: 0;
+  text-align: inherit;
+  font-weight: inherit;
+  line-height: inherit;
+  text-transform: inherit;
+}
+
+.m-header__navigation-icon {
+  display: block;
+  width: pxToRem(24);
+  height: pxToRem(24);
+  fill: currentColor;
+}
+
+// Special and main navigation
+.m-header__navigation--special,
+.m-header__navigation--main {
+  background: map-get(map-get($colors, basics), grey-navigation);
+  border-bottom: 1px solid map-get(map-get($colors, basics), grey-divider-bright);
+  font-size: pxToRem(24);
+  text-transform: uppercase;
+
+  .m-header__navigation-link {
+    padding: pxToRem(12) pxToRem(15) pxToRem(10);
+    transition: background-color $basic-transition;
+
+    &--l1 {
+      padding: pxToRem(6) pxToRem(15);
+    }
   }
 
-  // Temp nav alignment
-  .region-header {
+  .m-header__navigation-item {
+
+    &:hover,
+    [data-focus-source="key"] &:focus-within,
+    &.is-expanded {
+
+      .m-header__navigation-link {
+        background: map-get(map-get($colors, basics), grey-divider-bright);
+      }
+    }
+
+    &--l0 {
+      position: relative;
+
+      .m-header__navigation-icon {
+        position: absolute;
+        right: pxToRem(15);
+        top: pxToRem(16);
+        pointer-events: none;
+      }
+
+      &:not(:first-child) {
+        border-left: 1px solid map-get(map-get($colors, basics), white);
+      }
+    }
+
+    &--emergency {
+      color: map-get(map-get($colors, basics), red);
+
+      .m-header__navigation-link {
+        background: map-get(map-get($colors, basics), red-brighter);
+        min-height: pxToRem(55);
+        position: relative;
+      }
+
+      .m-header__navigation-text {
+        position: absolute;
+        left: pxToRem(15);
+      }
+
+      &:hover,
+      [data-focus-source="key"] &:focus-within {
+
+        .m-header__navigation-link {
+          background: map-get(map-get($colors, basics), red-bright);
+        }
+      }
+    }
+  }
+
+  .m-header__navigation-list {
+
+    &--l1 {
+      display: block;
+      padding: pxToRem(28) 0 pxToRem(43);
+    }
+  }
+
+  .m-header__navigation-dropdown {
+    position: absolute;
+    top: 100%;
+    left: 0;
+    width: 200%;
+    background: map-get(map-get($colors, basics), grey-divider-bright);
+    border-top: 1px solid map-get(map-get($colors, basics), white);
+    text-transform: none;
+
+    &.is-animating {
+      transition: height $basic-transition, opacity $basic-transition;
+    }
+  }
+}
+
+.m-header__navigation--special {
+  position: absolute;
+  right: 0;
+  bottom: 0;
+  width: 2/5 * 100%;
+  // Drupal adds relative positioning to some elements in admin mode
+  z-index: 1;
+
+  .m-header__navigation-item {
+    border-left: 1px solid map-get(map-get($colors, basics), white);
+  }
+}
+.m-header__navigation--main {
+  padding-right: 2/5 * 100%;
+}
+
+// Meta navigation
+.m-header__navigation--meta {
+  position: absolute;
+  top: pxToRem(36);
+  right: 0;
+  text-transform: uppercase;
+  white-space: nowrap;
+  line-height: 1;
+  font-size: pxToRem(15);
+  font-weight: 400;
+
+  .m-header__navigation-item {
+
+    &:not(:first-child) {
+      margin-left: pxToRem(10);
+      padding-left: pxToRem(10);
+      border-left: 1px solid map-get(map-get($colors, basics), grey-meta-navigation);
+    }
+  }
+
+  .m-header__navigation-link {
+    color: map-get(map-get($colors, basics), grey-meta-navigation);
+    margin: pxToRem(-1) 0 pxToRem(-1);
+    transition: color $basic-transition;
+
+    &:hover,
+    [data-focus-source="key"] &:focus {
+      color: map-get(map-get($colors, basics), black);
+    }
+  }
+}
+
+@include mq($to: medium) {
+
+  .m-header {
+    min-height: pxToRem(140);
+
+    &.is-sticky {
+
+      .m-header__wrapper {
+        top: pxToRem(-84);
+
+        // Compensate for admin toolbar
+        .toolbar-vertical & {
+          top: pxToRem(-45);
+        }
+      }
+    }
+
+    // Hide dropdown before Vue kicks in
+    &:not(.is-initialized) {
+
+      .m-header__menu-inner {
+        display: none;
+      }
+    }
+  }
+
+  .m-header__inner {
+    margin-left: - pxToRem($gutter-micro);
+    margin-right: - pxToRem($gutter-micro);
+  }
+
+  .m-header__region {
+    &--header {
+      padding: pxToRem(23) pxToRem($gutter-micro) pxToRem(77);
+      min-height: pxToRem(140);
+    }
+  }
+
+  .m-header__menu-toggle {
+    display: block;
+    position: absolute;
+    z-index: 1;
+    right: 0;
+    bottom: 0;
+    padding: 0;
+    background: map-get(map-get($colors, basics), grey-navigation);
+    border: 0;
+    border-left: 1px solid map-get(map-get($colors, basics), white);
+    border-bottom: 0px solid transparent;
+    transition: border-bottom-color $basic-transition;
+    cursor: pointer;
+
+    &[aria-expanded="true"] {
+      bottom: -1px;
+      border-bottom: 1px solid map-get(map-get($colors, basics), grey-navigation);
+    }
+  }
+
+  .m-header__menu-inner {
+    position: absolute;
+    top: 100%;
+    margin-top: 1px;
+    width: 100%;
+    overflow: hidden;
+
+    &.is-animating {
+      transition: height $basic-transition, opacity $basic-transition;
+    }
+  }
+
+  .m-header__menu-content {
+    background: map-get(map-get($colors, basics), grey-bright);
+    height: var(--header-navigation-height);
+    overflow-y: auto;
+    -webkit-overflow-scrolling: touch;
+  }
+
+  .m-header__navigation--special {
+    width: 100%;
+    padding-right: pxToRem(56); // Menu button width
+    border-bottom: 0;
+    font-size: pxToRem(15);
+    font-weight: 400;
+
+    .m-header__navigation-link {
+      padding-top: pxToRem(18);
+      padding-bottom: pxToRem(17);
+    }
+
+  }
+
+  .m-header__navigation--main {
+    padding-right: 0;
+    border-bottom: 0;
+
+    .m-header__navigation-dropdown {
+      position: relative;
+      width: auto;
+      border-top: 0;
+    }
+
+    .m-header__navigation-list {
+      display: block;
+
+      &--l0 {
+        border-bottom: 0;
+      }
+
+      &--l1 {
+        padding-top: 0;
+      }
+    }
+
+    .m-header__navigation-item {
+
+      &--l0 {
+
+        .m-header__navigation-icon {
+          top: pxToRem(48);
+          transition: transform $basic-transition;
+        }
+
+        &:not(:first-child) {
+          border-left: 0;
+          border-top: 1px solid map-get(map-get($colors, basics), grey-divider-bright);
+        }
+
+        &.is-expanded {
+
+          .m-header__navigation-icon {
+            transform: rotate(-45deg);
+          }
+        }
+      }
+    }
+
+    .m-header__navigation-link {
+      padding: pxToRem(12) pxToRem(15) pxToRem(11);
+
+      &--l0 {
+        padding-top: pxToRem(42);
+        padding-bottom: pxToRem(42);
+      }
+    }
+  }
+
+  .m-header__navigation--meta {
+    position: relative;
+    top: 0;
+    padding: pxToRem(16) 0;
+
+    .m-header__navigation-list {
+      display: block;
+    }
+
+    .m-header__navigation-item {
+
+      &:not(:first-child) {
+        margin-left: 0;
+        padding-left: 0;
+        border-left: 0;
+      }
+    }
+
+    .m-header__navigation-link {
+      padding: pxToRem(15);
+      color: map-get(map-get($colors, basics), black);
+    }
+  }
+}
+
+@include mq($from: medium) {
+  .m-header__navigation--main .m-header__navigation-item--l0 .m-header__navigation-icon {
+    display: none;
+  }
+}
+
+@include mq($from: large) {
+  .m-header__navigation--main .m-header__navigation-item--l0 .m-header__navigation-icon {
+    display: block;
+  }
+}
+
+// Print
+@media print {
+  #block-globalmessage,
+  #block-spezialnavigation,
+  .m-header__sticky,
+  .m-header__menu {
+    display: none;
+  }
+
+  .m-header__region {
+    padding: 0;
+  }
+
+  .m-header__region--header {
+    min-height: 0;
     display: flex;
+    justify-content: space-between;
+  }
+
+  #block-pageurlqrcode {
+    order: 0
+  }
+
+  .m-header__wrapper,
+  .m-header.is-sticky .m-header__wrapper {
+    position: relative;
+    top: 0;
+    margin-top: 0 !important;
+  }
+
+  .m-logo {
+    order: 1;
+  }
+
+  .m-header {
+    min-height: 0;
+    padding-bottom: 10px;
+    border-bottom: 1px solid map-get(map-get($colors, basics), "grey-divider-bright");
+  }
+}
+
+@page {
+  .m-logo {
+    display: none;
+  }
+}
+
+@page:first {
+  .m-logo {
+    display: block;
   }
 }
